@@ -1,4 +1,5 @@
 
-the geekr is a jabber client base on gloox,so you must install the gloox library first.
+the iCalk is a jabber client base on gloox,so you must install the gloox library first.
+now the gloox version must up to 1.0alpha
 
 now the project is experiemntaling
