@@ -159,3 +159,11 @@ void BuddyList::handleNonrosterPresence(Presence * stanza)
 	printf("接收到状态并不在列表中的人 %s \n",stanza->from().full().c_str());
 	//printf("可能说啥: %s\n", stanza->body().c_str());
 }
+
+
+void BuddyList::handleRosterError(const IQ& iq)
+{
+
+	std::cout<<"handleRosterError "<<iq.tag()->xml()<<std::endl;
+
+}
