@@ -1,0 +1,26 @@
+/*
+ * =====================================================================================
+ *
+ *       Filename:  JingleWatchSessionTask.cpp
+ *
+ *    Description:  
+ *
+ *        Version:  1.0
+ *        Created:  2008年01月23日 16时41分17秒
+ *       Revision:  none
+ *       Compiler:  gcc
+ *
+ *         Author:  first_name last_name (fl), fl@my-company.com
+ *        Company:  my-company
+ *
+ * =====================================================================================
+ */
+
+#include "JingleWatchSessionTask.h"
+
+JingleWatchSessionTask::JingleWatchSessionTask()
+{
+}
+JingleWatchSessionTask::~JingleWatchSessionTask()
+{
+}
